syntax = "proto2";
option cc_generic_services = false;

package HU;

enum STATUS
{
    STATUS_OK = 0;
}

message ButtonInfo
{
    required uint32 scan_code = 1;
    required bool is_pressed = 2;
    required uint32 meta = 3;
    required bool long_press = 4;
}

message ButtonInfoWrapper
{
    repeated ButtonInfo button = 1;
}

message TouchInfo
{
    enum TOUCH_ACTION
    {
        TOUCH_ACTION_PRESS = 0;
        TOUCH_ACTION_RELEASE = 1;
        TOUCH_ACTION_DRAG = 2;
    }
    message Location
    {
        required uint32 x = 1;
        required uint32 y = 2;
        required uint32 pointer_id = 3;
    }
    repeated Location location = 1;
    optional uint32 action_index = 2;
    required TOUCH_ACTION action = 3;
}

message RelativeInputEvent
{
    optional uint32 scan_code = 1;
    optional int32 delta = 2;
}

message AbsoluteInputEvent
{
    optional uint32 scan_code = 1;
    optional int32 value = 2;
}

message AbsoluteInputEventWrapper
{
    required AbsoluteInputEvent event = 1;
}

message RelativeInputEventWrapper
{
    required RelativeInputEvent event = 1;
}

message InputEvent
{
    required uint64 timestamp = 1;
    optional int32 disp_channel = 2;
    optional TouchInfo touch = 3;
    optional ButtonInfoWrapper button = 4;
    optional AbsoluteInputEventWrapper abs_event = 5;
    optional RelativeInputEventWrapper rel_event = 6;
}

message BindingRequest
{
    repeated int32 scan_codes = 1;
}

message BindingResponse
{
    required STATUS status = 1;
}

message SensorEvent
{
    message LocationData
    {
        optional uint64 timestamp = 1;
        optional int32 latitude = 2;
        optional int32 longitude = 3;
        optional uint32 accuracy = 4;
        optional int32 altitude = 5;
        optional int32 speed = 6;
        optional int32 bearing = 7;
    }
    
    message RPM
    {
        required int32 rpm = 1;
    }

    message FuelLevel
    {
        required int32 fuel_level = 1;
        optional int32 range = 2;
        optional bool low_fuel = 3;
    } 

    message NightMode
    {
        required bool is_night = 1;
    }

    message DrivingStatus
    {
        required int32 is_driving = 1;
    }

    message DeadReckoning
    {
        optional int32 steering_angel = 1;
        optional int32 wheel_speed = 2;
    }

    repeated LocationData location_data = 1;
    //repeated Compass = 2;
    //repeated Speed = 3;
    repeated RPM rpm = 4;
    //repeated Odometer = 5;
    repeated FuelLevel fuel_level = 6;
    //repeated ParkingBreak = 7;
    //repeated GearData = 8;
    //repeated Diagnostics = 9;
    repeated NightMode night_mode = 10;
    //repeated Environment = 11;
    //repeated HVAC = 12;
    repeated DrivingStatus driving_status = 13;
    repeated DeadReckoning dead_reckoning = 14;
    //repeated Passenger = 15;
    //repeated Door = 16;
    //repeated Light = 17;
    //repeated Tire = 18;
    //repeated Accel = 19;
    //repeated Gyro = 20;
    //repeated GPS = 21;
}

enum SENSOR_TYPE
{
    SENSOR_TYPE_UNKNOWN_SHOW_KEYBOARD = 13;
    SENSOR_TYPE_DRIVING_STATUS = 11;
    SENSOR_TYPE_NIGHT_DATA = 10;
    SENSOR_TYPE_RPM = 3;
    SENSOR_TYPE_DIAGNOSTICS = 8;
    SENSOR_TYPE_GEAR = 7;
    SENSOR_TYPE_LOCATION = 1;
}

enum AUDIO_TYPE
{
    AUDIO_TYPE_SPEECH = 1;
    AUDIO_TYPE_SYSTEM = 2;
    AUDIO_TYPE_MEDIA = 3;
    AUDIO_TYPE_ALARM = 4;
}

enum STREAM_TYPE
{
    STREAM_TYPE_AUDIO = 1;
    STREAM_TYPE_VIDEO = 3;   
}

message AudioCofig
{
    required uint32 sample_rate = 1;
    required uint32 bit_depth = 2;
    required uint32 channel_count = 3;
}

message ChannelDescriptor
{
    required uint32 channel_id = 1;
    message SensorChannel
    {
        message Sensor
        {
            optional SENSOR_TYPE type = 1;
        }
        repeated Sensor sensor_list = 1;
    }
    optional SensorChannel sensor_channel = 2;

    message OutputStreamChannel
    {
        required STREAM_TYPE type = 1;
        optional AUDIO_TYPE audio_type = 2;
        repeated AudioCofig audio_configs = 3;

        message VideoConfig
        {
            enum VIDEO_RESOLUTION
            {
                VIDEO_RESOLUTION_800x480 = 1;
                VIDEO_RESOLUTION_1280x720 = 2;
                VIDEO_RESOLUTION_1920x1080 = 3;
            }

            enum VIDEO_FPS
            {
                VIDEO_FPS_30 = 1;
                VIDEO_FPS_60 = 2;
            }
            required VIDEO_RESOLUTION resolution = 1;
            required VIDEO_FPS frame_rate = 2;
            required uint32 margin_width = 3;
            required uint32 margin_height = 4;
            required uint32 dpi = 5;
            optional uint32 additional_depth = 6;
        }
        repeated VideoConfig video_configs = 4;
        optional bool available_while_in_call = 5;
    }
    optional OutputStreamChannel output_stream_channel = 3;

    message InputEventChannel
    {
        message TouchScreenConfig
        {
            required uint32 width = 1;
            required uint32 height = 2;
        }
        repeated uint32 keycodes_supported = 1;
        optional TouchScreenConfig touch_screen_config = 2;
        optional TouchScreenConfig touch_pad_config = 3;
    }

    optional InputEventChannel input_event_channel = 4;

    message InputStreamChannel
    {
        required STREAM_TYPE type = 1;
        required AudioCofig audio_config = 2;
        optional bool available_while_in_call = 3;
    }

    optional InputStreamChannel input_stream_channel = 5;

    message BluetoothService 
    {
        enum BluetoothPairingMethod
        {
            BLUETOOTH_PARING_METHOD_1 = 1;
            BLUETOOTH_PARING_METHOD_A2DP = 2;
            BLUETOOTH_PARING_METHOD_3 = 3;
            BLUETOOTH_PARING_METHOD_HFP = 4;
        }
        required string car_address = 1;
        repeated BluetoothPairingMethod supported_pairing_methods = 2;
    }
    optional BluetoothService bluetooth_service = 6;

    message NavigationStatusService 
    {
        message ImageOptions
        {
            required int32 width = 1;
            required int32 height = 2;
            required int32 colour_depth_bits = 3;
        }

        required uint32 minimum_interval_ms = 1;
        required uint32 type = 2;
        optional ImageOptions image_options = 3;
    }
    optional NavigationStatusService navigation_status_service = 8;

    //bt service == 6
    //radio == 7
    //nav==8
    //mediaplayback == 9
    //phonestatus = 10
    //mediabrowser=11

    message VendorExtensionService
    {
        optional string name = 1;
        repeated string package_white_list = 2;
        optional bytes data = 3;
    }

    optional VendorExtensionService vendor_extension_service = 12;

    //vendor extension==12
    //genericnotification==13
}

message ServiceDiscoveryRequest
{
    optional string phone_name = 4;
}

message ServiceDiscoveryResponse
{
    repeated ChannelDescriptor channels = 1;
    required string head_unit_name = 2;
    required string car_model = 3;
    required string car_year = 4;
    required string car_serial = 5;
    required bool driver_pos = 6;
    required string headunit_make = 7;
    required string headunit_model = 8;
    required string sw_build = 9;
    required string sw_version = 10;
    required bool can_play_native_media_during_vr = 11;
    required bool hide_clock = 12;
}

message ChannelOpenRequest
{
    optional int32 priority = 1;
    optional int32 id = 2;    
}

message ChannelOpenResponse
{
    required STATUS status = 1;
}

message PingRequest
{
    required int64 timestamp = 1;
}

message PingResponse
{
    required int64 timestamp = 1;
}

message ShutdownRequest
{
    enum REASON
    {
        REASON_QUIT = 1;
    }
    optional REASON reason = 1; 
}

message ShutdownResponse
{
    
}


message MediaSetupRequest
{
    optional uint32 type = 1; //Enum?
}

message MediaSetupResponse
{
    enum MEDIA_STATUS
    {
        MEDIA_STATUS_1 = 1;
        MEDIA_STATUS_2 = 2;
    }
    required MEDIA_STATUS media_status = 1;
    required uint32 max_unacked = 2;
    repeated uint32 configs = 3;
}


message MediaStopRequest
{
    
}

message MediaStartRequest
{
    required int32 session = 1;
    optional uint32 config = 2;
}

message MediaAck
{
    required int32 session = 1;
    required uint32 value = 2;
}

message MicRequest
{
    required bool open = 1;
    optional bool anc = 2;
    optional bool ec = 3;
    optional int32 max_unacked = 4;
}

message MicResponse
{
    required int32 session = 1;
    required uint32 value = 2;
}

enum VIDEO_FOCUS_MODE
{
    VIDEO_FOCUS_MODE_FOCUSED = 1;
    VIDEO_FOCUS_MODE_UNFOCUSED = 2;
}

enum VIDEO_FOCUS_REASON
{
    VIDEO_FOCUS_REASON_1 = 1;
    VIDEO_FOCUS_REASON_2 = 2;
}

message VideoFocusRequest
{
    optional int32 disp_index = 1;
    optional VIDEO_FOCUS_MODE mode = 2;
    optional VIDEO_FOCUS_REASON reason = 3;
}

message VideoFocus
{
    optional VIDEO_FOCUS_MODE mode = 1;
    optional bool unrequested = 2; 
}


message SensorStartRequest
{
    required SENSOR_TYPE type = 1;
    optional int64 refresh_interval = 2;
}

message SensorStartResponse
{
    required STATUS status = 1;
}

message NavigationFocusRequest
{
    optional uint32 focus_type = 1; //Enum?
}

message NavigationFocusResponse
{
    optional uint32 focus_type = 1; //Enum?
}

message VoiceSessionRequest
{
    enum VOICE_STATUS
    {
        VOICE_STATUS_START = 1;
        VOICE_STATUS_STOP = 2;
    }
    optional VOICE_STATUS voice_status = 1; 
}

message AudioFocusRequest
{
    enum AUDIO_FOCUS
    {
        AUDIO_FOCUS_GAIN = 1;
        AUDIO_FOCUS_GAIN_TRANSIENT = 2;
        AUDIO_FOCUS_UNKNOWN = 3;
        AUDIO_FOCUS_RELEASE = 4;
    }
    required AUDIO_FOCUS focus_type = 1;
}

message AudioFocusResponse
{
    enum AUDIO_FOCUS_STATE
    {
        AUDIO_FOCUS_STATE_GAIN = 1;
        AUDIO_FOCUS_STATE_GAIN_TRANSIENT = 2;
        AUDIO_FOCUS_STATE_LOSS = 3;
        AUDIO_FOCUS_STATE_LOSS_TRANSIENT_CAN_DUCK = 4;
        AUDIO_FOCUS_STATE_LOSS_TRANSIENT = 5;
        AUDIO_FOCUS_STATE_GAIN_MEDIA_ONLY = 6;
        AUDIO_FOCUS_STATE_GAIN_TRANSIENT_GUIDANCE_ONLY = 7;
    }
    required AUDIO_FOCUS_STATE focus_type = 1;
}

message AuthCompleteResponse
{
    required STATUS status = 1;
}